--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-compiler-target></maven-compiler-target>
         <junit.version>5.9.2</junit.version>
     </properties>
 
